payment and min price
